deployment-k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-postgres
  labels:
    app: flask-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-postgres
  template:
    metadata:
      labels:
        app: flask-postgres
    spec:
      containers:
      - name: flask-postgres
        image: cmelgreen/docker-flask-postgres
        resources:
          limits:
            memory: 512Mi
            cpu: "1"
          requests:
            memory: 256Mi
            cpu: "1"
        ports:
        - containerPort: 5000
